Fix bug with token_required
